--- a/main/package.json
+++ b/main/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "rimraf": "^2.6.3",
     "socket.io": "^2.2.0"
   }
 }
