--- a/zombie/package.json
+++ b/zombie/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "forever": "^0.15.3",
     "public-ip": "^3.0.0",
     "socket.io-client": "^2.2.0"
   },
