--- a/zombie/package.json
+++ b/zombie/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "forever": "^0.15.3",
+    "minimist": "^1.2.0",
     "public-ip": "^3.0.0",
     "socket.io-client": "^2.2.0"
   },
